Add user repository, add user handlers
