# task1/openapi/openapi.yaml
@@ -86,6 +86,90 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Message'    
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Users'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'              
+  /users/{id}:
+    patch:
+      summary: Patch user by id
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to patch
+          schema:
+            type: integer
+      requestBody:
+        description: The user to patch
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'
+      responses:
+        "201":
+          description:  The user is patched
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+    delete:
+      summary: Delete user by id
+      tags: 
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to delete
+          schema:
+            type: integer
+      requestBody:
+        description: The user to delete
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Users'  
+      responses:
+        "201":
+          description:  The user is deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+
 components:
   schemas:
     Message:
@@ -93,6 +177,22 @@ components:
       properties:
         id:
           type: integer
-          format: uint # так как в БД айди это только положительные числа.
+          format: uint 
         message:
           type: string
+    Users:
+      type: object
+      properties:
+        id:
+          type: integer
+          format : uint
+        email:
+          type: string
+        password:
+          type: string   
+        created_at:
+          type: string
+        updated_at:
+          type: string
+        delete_at:
+          type: string  
